Bug 1125371 - Silence some GCC-only warnings about uninitialized varaibles when building with --enable-optimize. r=jandem.